--- a/about.css
+++ b/about.css
@@ -34,6 +34,7 @@
        display: flex;
        justify-content: space-evenly;
        padding-top: 20px;
+       text-align:center;
       
    
    }
