--- a/about.css
+++ b/about.css
@@ -195,6 +195,9 @@
             padding: 15px;
             font-family: 'Oswald', sans-serif;
           }
+         ul{
+             font-size:5px;
+         }
      }
    
      /* media querry for tablet */
