--- a/about.css
+++ b/about.css
@@ -199,6 +199,11 @@
          ul{
              font-size:5px;
          }
+           #childOne p {
+       width: 40%;
+        font-size:10px;
+       position: relative;
+       top: 70px;
      }
    
      /* media querry for tablet */
