--- a/about.css
+++ b/about.css
@@ -203,7 +203,7 @@
        width: 40%;
         font-size:10px;
        position: relative;
-       top: 70px;
+       bottom:40px;
      }
    
      /* media querry for tablet */
