--- a/about.css
+++ b/about.css
@@ -199,7 +199,7 @@
          ul{
              font-size: 15px;
          }
-           #childOne p {
+           #para{
        width: 40%;
         font-size:10px;
        position: relative;
