--- a/about.css
+++ b/about.css
@@ -203,7 +203,9 @@
        width: 40%;
         font-size:10px;
        position: relative;
-       bottom:40px;
+       bottom:60px;
+    text-align:center;
+    
      }
      }
    
