--- a/about.css
+++ b/about.css
@@ -196,7 +196,7 @@
             padding: 15px;
             font-family: 'Oswald', sans-serif;
           }
-         ul{
+         ul li {
              font-size: 15px;
          }
            #para{
